Opened 16 years ago
Closed 15 years ago
#3432 closed bug (fixed)
PANIC: tried to get writable block on a read-only cache !
Reported by: | oco | Owned by: | axeld |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | File Systems/BFS | Version: | R1/pre-alpha1 |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
Mounting read-only a partition from a USB hard drive that have experienced at least bug #3400 (so probably not cleanly unmounted) result in this error after a few seconds :
PANIC: tried to get writable block on a read-only cache !
Once the partition is mounted, the bfs block allocator thread eat most of the CPU until the panic message.
Tested in hrev29174.
Here is the kernel stack :
panic
block_cache_get_writable_etc
<bfs> AllocationBlock::SetToWritable(Transaction&: 0x8482bfd0, AllocationGroup&: 0x83457000, uint16: 0x0)
<bfs> AllocationGroup::Allocate(Transaction&: 0x8482bfd0, uint16: 0x0, inte32: 4725)
<bfs> BlockAllocator::Initialize(BlockAllocator*: NULL)
<kernel_x86> _create_kernel_thread_kentry()
Should be fixed in hrev31255.