* The block allocator will no longer try to fix a missing allocation on a   read-only volume. This fixes bug #3432. * Journal::ReplayLog() will now return an error on a read-only device, rendering   read-only dirty volumes unmountable.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@31255 a95241bf-73f2-0310-859d-f6bbb57e9c96